fix; typos